kubernetes/applications/calibre-web-automated/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  namespace: apps
spec:
  selector:
    matchLabels:
      app: calibre-web-automated
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: calibre-web-automated
    spec:
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: config
            - name: data
              mountPath: /config/.config/calibre/plugins
              subPath: plugins
            - name: books
              mountPath: /calibre-library
            - name: books-ingest
              mountPath: /cwa-book-ingest
          resources:
            requests:
              cpu: 20m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: calibre-web-automated
        - name: books
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/books
        - name: books-ingest
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/books-ingest
