kubernetes/applications/calibre-web-automated/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: calibre-web-automated
